# freemind-cli

./: Cargo.toml  README.md
src/: data.rs  main.rs
